# mecanum

./: README.md  pin connections.txt
TICcrane/: CMakeLists.txt  package.xml
TICcrane/action/: MoveToPosition.action
TICcrane/config/: tic_crane_params.yaml
TICcrane/include/tic_crane/: server.hpp
TICcrane/launch/: tic_crane.launch
TICcrane/scripts/: state_machine.py
TICcrane/src/: server.cpp  server_node.cpp
astrocen_pkg/src/: odometry.cpp
astrocent_pkg/: CMakeLists.txt  package.xml
astrocent_pkg/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
astrocent_pkg/launch/: amcl.launch  astrocent.launch  gmapping.launch  move_base.launch
astrocent_pkg/msg/: Main_vels.msg  ManualPWM.msg  RpmPwm.msg
astrocent_pkg/scripts/: controller2vel_node.py  rpm2vel_node.py  vel2rpm_node.py
astrocent_pkg/src/: odometry.cpp
autolaunch/: README.txt  aliases.txt  astrocent.service  startup_launch.sh
src/: odometry.cpp
teensy/: Vector4int.h  Vector4x2.h  rpm_vel.ino  teensy.ino
teensy/messages/: Vector4float.h
